Adding back in UNBRANDED_LANDING_PAGE

--- a/.env.development
+++ b/.env.development
@@ -12,6 +12,7 @@ USER_INFO_COOKIE_NAME='edx-user-info'
 SEGMENT_KEY=''
 DESIGNER_BASE_URL='http://designer.app:18808'
 HOSTNAME='example'
+UNBRANDED_LANDING_PAGE=''
 USE_ENTERPRISE_MOCK_DATA=''
 IDP_SLUG='saml-default'
 # uncomment the line below to use mock designer data from @edx/gatsby-source-portal-designer
