--- a/.env.development
+++ b/.env.development
@@ -13,11 +13,9 @@ SEGMENT_KEY=''
 DESIGNER_BASE_URL='http://designer.app:18808'
 HOSTNAME='example'
 UNBRANDED_LANDING_PAGE=''
-USE_PROGRAMS_MOCK_DATA=''
 USE_ENTERPRISE_MOCK_DATA=''
 IDP_SLUG='saml-default'
-# uncomment ONLY 1 of the lines below to use mock designer data from plugins/gatsby-source-wagtail/test/
-# USE_PROGRAMS_MOCK_DATA=true
+# uncomment the line below to use mock designer data from @edx/gatsby-source-portal-designer
 # USE_ENTERPRISE_MOCK_DATA=true
 # uncomment the line below to simulate a deployment in which there is no IDP
 # IDP_SLUG=''
