WIP moving towards @edx/frontend-build

--- a/.env.development
+++ b/.env.development
@@ -10,14 +10,4 @@ REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
 ACCESS_TOKEN_COOKIE_NAME='edx-jwt-cookie-header-payload'
 USER_INFO_COOKIE_NAME='edx-user-info'
 SEGMENT_KEY=''
-DESIGNER_BASE_URL='http://designer.app:18808'
-HOSTNAME='example'
-UNBRANDED_LANDING_PAGE=''
-USE_ENTERPRISE_MOCK_DATA=''
-IDP_SLUG='saml-default'
-# uncomment the line below to use mock designer data from @edx/gatsby-source-portal-designer
-# USE_ENTERPRISE_MOCK_DATA=true
-# uncomment the line below to simulate a deployment in which there is no IDP
-# IDP_SLUG=''
-# uncomment the line below to host the site at /{HOSTNAME}/
-# ENABLE_PATH_PREFIX = true
+PORT=8734
