--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "version": "0.1.0",
   "author": "",
   "dependencies": {
-    "@edx/frontend-analytics": "^2.0.0",
     "@edx/frontend-auth": "^5.3.4",
     "@edx/frontend-component-footer": "^3.0.4",
     "@edx/frontend-component-site-header": "^2.5.0",
-    "@edx/frontend-i18n": "^2.1.1",
     "@edx/frontend-learner-portal-base": "^1.0.7",
-    "@edx/frontend-logging": "^2.0.1",
+    "@edx/frontend-platform": "^1.1.14",
     "@edx/gatsby-source-portal-designer": "^1.0.2",
     "@edx/paragon": "^7.1.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
@@ -33,7 +31,6 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.5",
     "history": "^4.7.2",
-    "lodash.camelcase": "^4.3.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.7.0",
