--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.1.0",
   "author": "edX",
   "dependencies": {
+    "@edx/frontend-analytics": "^3.0.0",
     "@edx/frontend-auth": "^5.3.4",
     "@edx/frontend-component-footer": "^3.0.4",
     "@edx/frontend-component-site-header": "^2.5.0",
+    "@edx/frontend-i18n": "^3.0.4",
     "@edx/frontend-learner-portal-base": "^1.0.7",
     "@edx/frontend-platform": "^1.1.14",
     "@edx/paragon": "^7.1.5",
