--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "version": "0.1.0",
   "author": "edX",
   "dependencies": {
-    "@edx/frontend-analytics": "^3.0.0",
-    "@edx/frontend-auth": "^5.3.4",
-    "@edx/frontend-component-footer": "^3.0.4",
+    "@edx/frontend-component-footer": "^10.0.0",
     "@edx/frontend-component-site-header": "^2.5.0",
     "@edx/frontend-i18n": "^3.0.4",
-    "@edx/frontend-learner-portal-base": "^1.0.7",
+    "@edx/frontend-logging": "^3.0.1",
     "@edx/frontend-platform": "^1.1.14",
     "@edx/paragon": "^7.1.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
@@ -28,14 +26,14 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.7.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-intl": "^2.8.0",
     "react-redux": "^5.0.7",
     "react-responsive": "^6.1.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
