--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.15.0",
     "babel-jest": "^24.5.0",
-    "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.5",
     "connected-react-router": "^5.0.1",
+    "core-js": "^3.6.4",
     "email-prop-type": "^1.1.5",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
