--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "frontend-app-learner-portal",
-  "private": true,
-  "description": "The learner portal allows a customized experience of learner-facing micro-frontend page components.",
+  "name": "frontend-app-learner-portal-enterprise",
+  "description": "A microfrontend that supports the enterprise learner experience.",
   "version": "0.1.0",
-  "author": "",
+  "author": "edX",
   "dependencies": {
-    "@edx/frontend-analytics": "^2.0.0",
-    "@edx/frontend-auth": "^5.3.4",
-    "@edx/frontend-component-footer": "^3.0.4",
+    "@edx/frontend-component-footer": "^10.0.0",
     "@edx/frontend-component-site-header": "^2.5.0",
-    "@edx/frontend-i18n": "^2.1.1",
-    "@edx/frontend-learner-portal-base": "^1.0.7",
-    "@edx/frontend-logging": "^2.0.1",
-    "@edx/gatsby-source-portal-designer": "^1.0.2",
+    "@edx/frontend-i18n": "^3.0.4",
+    "@edx/frontend-logging": "^3.0.1",
+    "@edx/frontend-platform": "^1.1.14",
     "@edx/paragon": "^7.1.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -23,28 +19,21 @@
     "babel-jest": "^24.5.0",
     "classnames": "^2.2.5",
     "connected-react-router": "^5.0.1",
-    "dotenv": "^7.0.0",
+    "core-js": "^3.6.4",
     "email-prop-type": "^1.1.5",
     "font-awesome": "^4.7.0",
-    "gatsby": "^2.1.31",
-    "gatsby-plugin-compile-es6-packages": "^2.1.0",
-    "gatsby-plugin-env-variables": "^1.0.1",
-    "gatsby-plugin-react-helmet": "^3.1.0",
-    "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.5",
     "history": "^4.7.2",
-    "lodash.camelcase": "^4.3.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.7.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-intl": "^2.8.0",
     "react-redux": "^5.0.7",
     "react-responsive": "^6.1.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
@@ -54,17 +43,9 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.4.5",
-    "codecov": "^3.1.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.11.2",
-    "es-check": "^5.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-edx": "^4.0.4",
-    "husky": "^0.14.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.5.0",
-    "node-sass": "^4.11.0",
+    "@edx/frontend-build": "^3.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1"
@@ -72,14 +53,13 @@
   "keywords": [],
   "license": "GNU",
   "scripts": {
-    "build": "gatsby build --prefix-paths",
-    "postbuild": "rm -r ./dist > /dev/null; mv public dist",
-    "start": "gatsby develop -p 8734 --host 0.0.0.0",
-    "serve": "gatsby serve -p 8735",
-    "test": "jest --verbose --coverage --passWithNoTests",
-    "lint": "eslint --ext .js --ext .jsx .",
-    "clean": "gatsby clean",
-    "shell": "gatsby repl"
+    "build": "fedx-scripts webpack",
+    "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
+    "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
+    "precommit": "npm run lint",
+    "snapshot": "fedx-scripts jest --updateSnapshot",
+    "start": "fedx-scripts webpack-dev-server --progress",
+    "test": "fedx-scripts jest --coverage --passWithNoTests"
   },
   "repository": {
     "type": "git",
