rename and set CATALOG_BASE_URL

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-BASE_URL='localhost:8734'
-ENTERPRISE_CATALOG_MFE_URL='http://example.com'
+BASE_URL='http://localhost:8734'
+CATALOG_BASE_URL='http://localhost:18000/courses'
 ORDERS_MFE_URL='http://localhost:1996'
 LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
