--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
 BASE_URL='http://localhost:8734'
 CATALOG_BASE_URL='http://localhost:18000/courses'
-ORDERS_MFE_URL='http://localhost:1996'
 LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
+ORDER_HISTORY_URL='http://localhost:1996/orders'
 LOGIN_URL='http://localhost:18000/login'
 LOGOUT_URL='http://localhost:18000/logout'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
