bringing in some realish data

--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ BASE_URL='http://localhost:8734'
 CATALOG_BASE_URL='http://localhost:18000/courses'
 LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
+DISCOVERY_API_URL='http://localhost:18381/api'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
 LOGIN_URL='http://localhost:18000/login'
 LOGOUT_URL='http://localhost:18000/logout'
