split course page into subcomponents and context

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "email-prop-type": "^1.1.5",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "iso-639-1": "^2.1.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.7.0",
