progress on course detail UI

--- a/.env.development
+++ b/.env.development
@@ -4,6 +4,7 @@ LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 DISCOVERY_API_URL='http://localhost:18381/api'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
+MARKETING_SITE_URL='https://stage.edx.org'
 LOGIN_URL='http://localhost:18000/login'
 LOGOUT_URL='http://localhost:18000/logout'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
