--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,7 @@ CATALOG_BASE_URL='http://localhost:18000/courses'
 LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 DISCOVERY_API_URL='http://localhost:18381/api'
+ENTERPRISE_CATALOG_API_URL='http://localhost:18160/api'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
 MARKETING_SITE_URL='https://stage.edx.org'
 LOGIN_URL='http://localhost:18000/login'
