--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@edx/frontend-component-site-header": "^2.5.0",
     "@edx/frontend-i18n": "^3.0.4",
     "@edx/frontend-logging": "^3.0.1",
-    "@edx/frontend-platform": "^1.1.14",
+    "@edx/frontend-platform": "^1.3.1",
     "@edx/paragon": "^7.1.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -17,6 +17,7 @@
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.15.0",
     "babel-jest": "^24.5.0",
+    "camelcase-keys": "^6.2.0",
     "classnames": "^2.2.5",
     "connected-react-router": "^5.0.1",
     "core-js": "^3.6.4",
@@ -33,7 +34,7 @@
     "react-redux": "^5.0.7",
     "react-responsive": "^6.1.2",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.1.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
