update env vars to use existing configured vars

--- a/.env.development
+++ b/.env.development
@@ -2,10 +2,10 @@ BASE_URL='http://localhost:8734'
 CATALOG_BASE_URL='http://localhost:18000/courses'
 LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
-DISCOVERY_API_URL='http://localhost:18381/api'
-ENTERPRISE_CATALOG_API_URL='http://localhost:18160/api'
+DISCOVERY_API_BASE_URL='http://localhost:18381'
+ENTERPRISE_CATALOG_API_URL='http://localhost:18160'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
-MARKETING_SITE_URL='https://stage.edx.org'
+MARKETING_SITE_BASE_URL='https://stage.edx.org'
 LOGIN_URL='http://localhost:18000/login'
 LOGOUT_URL='http://localhost:18000/logout'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
