--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@edx/frontend-i18n": "^3.0.4",
     "@edx/frontend-logging": "^3.0.1",
     "@edx/frontend-platform": "^1.3.1",
-    "@edx/paragon": "^7.1.5",
+    "@edx/paragon": "^9.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@testing-library/jest-dom": "^5.10.1",
     "@testing-library/react": "^10.2.1",
+    "algoliasearch": "^4.3.0",
     "axios": "^0.19.0",
     "axios-mock-adapter": "^1.15.0",
     "babel-jest": "^24.5.0",
@@ -33,7 +34,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.6.0",
     "react-intl": "^2.8.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^5.0.7",
     "react-responsive": "^6.1.2",
     "react-router": "^4.3.1",
