--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 DISCOVERY_API_BASE_URL='http://localhost:18381'
 ENTERPRISE_CATALOG_API_BASE_URL='http://localhost:18160'
-ORDER_HISTORY_URL='http://localhost:1996/orders'
+LICENSE_MANAGER_URL='http://localhost:18170'
 MARKETING_SITE_BASE_URL='https://stage.edx.org'
 LOGIN_URL='http://localhost:18000/login'
 LOGOUT_URL='http://localhost:18000/logout'
