--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios-mock-adapter": "^1.15.0",
     "babel-jest": "^24.5.0",
     "classnames": "^2.2.5",
+    "color": "^3.1.2",
     "connected-react-router": "^5.0.1",
     "core-js": "^3.6.4",
     "email-prop-type": "^1.1.5",
