Integrate Algolia and implement license access redirect logic (#34)
* Integrate with Algolia and wire up facet filters

* license redirect validation and filter search results by catalog/customer

* rebase on master and clean up styles

--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 DISCOVERY_API_BASE_URL='http://localhost:18381'
 ENTERPRISE_CATALOG_API_BASE_URL='http://localhost:18160'
-ORDER_HISTORY_URL='http://localhost:1996/orders'
+LICENSE_MANAGER_URL='http://localhost:18170'
 MARKETING_SITE_BASE_URL='https://stage.edx.org'
 LOGIN_URL='http://localhost:18000/login'
 LOGOUT_URL='http://localhost:18000/logout'
@@ -13,3 +13,5 @@ ACCESS_TOKEN_COOKIE_NAME='edx-jwt-cookie-header-payload'
 USER_INFO_COOKIE_NAME='edx-user-info'
 SEGMENT_KEY=''
 PORT=8734
+ALGOLIA_APP_ID=''
+ALGOLIA_SEARCH_API_KEY=''
