--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.6.0",
     "react-intl": "^2.8.0",
-    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^5.0.7",
     "react-responsive": "^6.1.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-truncate": "^2.4.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
