--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.6.0",
     "react-intl": "^2.8.0",
+    "react-loading-skeleton": "^2.1.1",
     "react-redux": "^5.0.7",
     "react-responsive": "^6.1.2",
     "react-router": "^4.3.1",
