Exempt certain files from prefer-deafault-export eslint rule
index.js, service.js and hooks.js(x) files are now exempt from the rule.
We generally don't have a default export from these files, and were having to manually disable eslint each time.

--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,14 @@
     ],
     "template-curly-spacing": "off"
   },
+  "overrides": [
+    {
+      "files": ["**/index.js", "**/service.js", "**/hooks.js", "**/hooks.jsx"],
+      "rules": {
+        "import/prefer-default-export": "off"
+      }
+    }
+  ],
   "env": {
     "jest": true
   },
