--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "edX",
   "dependencies": {
     "@edx/frontend-component-footer": "^10.0.0",
-    "@edx/frontend-component-site-header": "^2.5.0",
     "@edx/frontend-i18n": "^3.0.4",
     "@edx/frontend-logging": "^3.0.1",
     "@edx/frontend-platform": "^1.3.1",
@@ -43,6 +42,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^5.0.0-alpha.9",
+    "react-transition-group": "^4.4.1",
     "react-truncate": "^2.4.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.0",
