adding integration warning modal that uses cookies to be shown once per session

--- a/.env.development
+++ b/.env.development
@@ -11,6 +11,7 @@ CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
 REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
 ACCESS_TOKEN_COOKIE_NAME='edx-jwt-cookie-header-payload'
 USER_INFO_COOKIE_NAME='edx-user-info'
+INTEGRATION_WARNING_DISMISSED_COOKIE_NAME='integration-warning-dismissed'
 SEGMENT_KEY=''
 PORT=8734
 ALGOLIA_APP_ID=''
