--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@testing-library/react-hooks": "^3.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "match-media-mock": "^0.1.1",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.13.1",
     "redux-mock-store": "^1.5.1"
