--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connected-react-router": "^5.0.1",
     "core-js": "^3.6.4",
     "email-prop-type": "^1.1.5",
+    "final-form": "^4.20.1",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "iso-639-1": "^2.1.0",
@@ -32,6 +33,7 @@
     "query-string": "^6.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-final-form": "^6.5.2",
     "react-fullstory": "^1.4.0",
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.6.0",
