--- a/.env.development
+++ b/.env.development
@@ -19,4 +19,4 @@ ALGOLIA_SEARCH_API_KEY=''
 ALGOLIA_INDEX_NAME=''
 FULLSTORY_ORG_ID=''
 USE_API_CACHE=''
-FEATURE_ENROLL_WITH_CODES=true
+FEATURE_ENROLL_WITH_CODES='true'
