--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# local dev related
+# https://github.com/edx/frontend-build#local-module-configuration-for-webpack
+module.config.js
+
 # Logs
 logs
 *.log
