dependency changes and es5 check

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "edX",
   "dependencies": {
     "@edx/frontend-component-footer": "^10.0.0",
+    "@edx/frontend-enterprise": "^4.2.3",
     "@edx/frontend-i18n": "^3.0.4",
     "@edx/frontend-logging": "^3.0.1",
     "@edx/frontend-platform": "^1.7.0",
@@ -29,7 +30,7 @@
     "iso-639-1": "^2.1.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.7.0",
+    "query-string": "^5.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-fullstory": "^1.4.0",
@@ -57,6 +58,7 @@
     "@testing-library/react-hooks": "^3.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "es-check": "^5.1.2",
     "match-media-mock": "^0.1.1",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.13.1",
@@ -68,6 +70,7 @@
     "build": "fedx-scripts webpack",
     "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
+    "is-es5": "es-check es5 ./dist/*.js",
     "precommit": "npm run lint",
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
