--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.2.1",
     "algoliasearch": "^4.3.0",
     "axios": "^0.19.0",
-    "axios-mock-adapter": "^1.15.0",
     "classnames": "^2.2.5",
     "color": "^3.1.2",
     "connected-react-router": "^5.0.1",
@@ -54,10 +51,14 @@
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.15.0",
     "@edx/frontend-build": "^5.3.2",
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.2.1",
     "@testing-library/react-hooks": "^3.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "eslint-plugin-import": "^2.22.1",
     "es-check": "^5.1.2",
     "match-media-mock": "^0.1.1",
     "prettier": "^1.16.4",
