Use search component from new release of frontend-enterprise (#123)
* Use frontend-enterprise as a dependency to pull new search components

* dependency changes and es5 check

* Files to be removed

* some fixes, eslint, and dependency moves to dev

* don't run escheck at this time in travis, not working yet, some other cleanup

* feat: Dependency changes for latest libs

* fix: remove travis.yml botched rebase

* feat: package json changes

* feat: react-instantsearch-dom 6.8.2

* feat: use new release of frontend-enterprise

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "edX",
   "dependencies": {
     "@edx/frontend-component-footer": "^10.0.0",
+    "@edx/frontend-enterprise": "^4.5.0",
     "@edx/frontend-i18n": "^3.0.4",
     "@edx/frontend-logging": "^3.0.1",
     "@edx/frontend-platform": "^1.7.0",
@@ -14,11 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.2.1",
     "algoliasearch": "^4.3.0",
     "axios": "^0.19.0",
-    "axios-mock-adapter": "^1.15.0",
     "classnames": "^2.2.5",
     "color": "^3.1.2",
     "connected-react-router": "^5.0.1",
@@ -29,12 +27,12 @@
     "iso-639-1": "^2.1.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.7.0",
+    "query-string": "^5.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-fullstory": "^1.4.0",
     "react-helmet": "^5.2.1",
-    "react-instantsearch-dom": "^6.6.0",
+    "react-instantsearch-dom": "^6.8.2",
     "react-intl": "^2.8.0",
     "react-loading-skeleton": "^2.1.1",
     "react-redux": "^7.2.1",
@@ -53,10 +51,14 @@
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
-    "@edx/frontend-build": "^5.3.2",
+    "@edx/frontend-build": "^5.4.0",
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.2.1",
     "@testing-library/react-hooks": "^3.2.1",
+    "axios-mock-adapter": "^1.15.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "es-check": "^5.1.2",
     "match-media-mock": "^0.1.1",
     "prettier": "^1.16.4",
     "react-test-renderer": "^16.13.1",
@@ -68,6 +70,7 @@
     "build": "fedx-scripts webpack",
     "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
+    "is-es5": "es-check es5 ./dist/*.js",
     "precommit": "npm run lint",
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
