--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "precommit": "npm run lint",
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
-    "test": "fedx-scripts jest --coverage --passWithNoTests"
+    "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%"
   },
   "repository": {
     "type": "git",
