--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "author": "edX",
   "dependencies": {
+    "@edx/brand": "npm:@edx/brand-edx.org@^1.2.2",
     "@edx/frontend-component-footer": "10.0.11",
     "@edx/frontend-enterprise": "4.5.1",
     "@edx/frontend-i18n": "3.0.4",
@@ -39,6 +40,7 @@
     "react-responsive": "6.1.2",
     "react-router": "4.3.1",
     "react-router-dom": "5.2.0",
+    "react-router-hash-link": "^2.2.2",
     "react-router-redux": "5.0.0-alpha.9",
     "react-transition-group": "4.4.1",
     "react-truncate": "2.4.0",
