--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.1.0",
   "author": "edX",
   "dependencies": {
+    "@edx/brand": "npm:@edx/brand-openedx@^1.1.0",
     "@edx/frontend-component-footer": "10.0.11",
     "@edx/frontend-enterprise": "4.5.1",
-    "@edx/frontend-i18n": "3.0.4",
-    "@edx/frontend-logging": "3.0.1",
     "@edx/frontend-platform": "1.8.0",
     "@edx/paragon": "12.3.1",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
@@ -39,6 +38,7 @@
     "react-responsive": "6.1.2",
     "react-router": "4.3.1",
     "react-router-dom": "5.2.0",
+    "react-router-hash-link": "2.2.2",
     "react-router-redux": "5.0.0-alpha.9",
     "react-transition-group": "4.4.1",
     "react-truncate": "2.4.0",
@@ -65,7 +65,7 @@
     "redux-mock-store": "1.5.4"
   },
   "keywords": [],
-  "license": "GNU",
+  "license": "AGPL-3.0",
   "scripts": {
     "build": "fedx-scripts webpack",
     "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
