--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .env.private
 module.config.js
 
+# frontend-build 5.6.0+ will merge in these changes for local dev into development env vars
+.env.private
+
 # Logs
 logs
 *.log
