--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # local dev related
 # https://github.com/edx/frontend-build#local-module-configuration-for-webpack
+.env.private
 module.config.js
 
 # Logs
