--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@edx/frontend-component-footer": "10.1.0",
     "@edx/frontend-enterprise": "4.6.0",
     "@edx/frontend-platform": "1.8.2",
-    "@edx/paragon": "12.4.1",
+    "@edx/paragon": "^13.2.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
