--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@edx/frontend-component-footer": "10.1.0",
     "@edx/frontend-enterprise": "4.6.0",
     "@edx/frontend-platform": "1.8.2",
-    "@edx/paragon": "^13.2.0",
+    "@edx/paragon": "13.12.1",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
@@ -42,7 +42,6 @@
     "react-router-redux": "5.0.0-alpha.9",
     "react-transition-group": "4.4.1",
     "react-truncate": "2.4.0",
-    "recompose": "0.30.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-logger": "3.0.6",
