--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
     "@edx/frontend-component-footer": "10.1.0",
-    "@edx/frontend-enterprise": "4.6.0",
+    "@edx/frontend-enterprise": "4.6.2",
     "@edx/frontend-platform": "1.8.1",
     "@edx/paragon": "12.4.1",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
@@ -14,7 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "0.1.12",
-    "algoliasearch": "4.6.0",
+    "algoliasearch": "^4.8.5",
     "axios": "0.21.1",
     "classnames": "2.2.6",
     "color": "3.1.3",
@@ -31,7 +31,7 @@
     "react-dom": "16.14.0",
     "react-fullstory": "1.4.0",
     "react-helmet": "5.2.1",
-    "react-instantsearch-dom": "6.8.2",
+    "react-instantsearch-dom": "^6.10.0",
     "react-intl": "2.9.0",
     "react-loading-skeleton": "2.1.1",
     "react-redux": "7.2.2",
