--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
     "@edx/frontend-component-footer": "10.1.0",
-    "@edx/frontend-enterprise": "5.1.0",
+    "@edx/frontend-enterprise": "^5.2.0",
     "@edx/frontend-platform": "1.8.2",
     "@edx/paragon": "13.17.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
@@ -24,6 +24,7 @@
     "font-awesome": "4.7.0",
     "history": "4.10.1",
     "iso-639-1": "2.1.4",
+    "lodash.debounce": "^4.0.8",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
     "query-string": "5.1.1",
