--- a/.env.development
+++ b/.env.development
@@ -25,4 +25,5 @@ LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 FEATURE_ENROLL_WITH_CODES='true'
+FEATURE_LANGUAGE_FACET='true'
 SHOW_MAINTENANCE_ALERT=''
