--- a/.env.development
+++ b/.env.development
@@ -26,4 +26,5 @@ LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 FEATURE_ENROLL_WITH_CODES='true'
 FEATURE_LANGUAGE_FACET='true'
+FEATURE_PROGRAM_TITLES_FACET='true'
 SHOW_MAINTENANCE_ALERT=''
