--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/react-hooks": "3.7.0",
     "axios-mock-adapter": "1.19.0",
+    "coveralls": "3.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
     "es-check": "5.1.2",
@@ -68,6 +69,7 @@
   "license": "AGPL-3.0",
   "scripts": {
     "build": "fedx-scripts webpack",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
     "lint:fix": "fedx-scripts eslint --fix --ext .js --ext .jsx .",
