--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@edx/frontend-enterprise-catalog-search": "^0.1.6",
     "@edx/frontend-enterprise-logistration": "^0.1.5",
     "@edx/frontend-enterprise-utils": "^0.1.5",
-    "@edx/frontend-platform": "1.9.5",
+    "@edx/frontend-platform": "^1.9.6",
     "@edx/paragon": "14.6.1",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
