--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
     "@edx/frontend-component-footer": "10.1.0",
-    "@edx/frontend-enterprise-catalog-search": "^0.1.6",
-    "@edx/frontend-enterprise-logistration": "^0.1.5",
-    "@edx/frontend-enterprise-utils": "^0.1.5",
-    "@edx/frontend-platform": "^1.9.6",
+    "@edx/frontend-enterprise-catalog-search": "0.1.8",
+    "@edx/frontend-enterprise-logistration": "0.1.5",
+    "@edx/frontend-enterprise-utils": "0.1.5",
+    "@edx/frontend-platform": "1.9.6",
     "@edx/paragon": "14.6.1",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
