feat: enable hotjar metrics

--- a/.env.development
+++ b/.env.development
@@ -28,3 +28,6 @@ FEATURE_ENROLL_WITH_CODES='true'
 FEATURE_LANGUAGE_FACET='true'
 FEATURE_PROGRAM_TITLES_FACET='true'
 SHOW_MAINTENANCE_ALERT=''
+HOTJAR_APP_ID=2426588
+HOTJAR_VERSION=6
+HOTJAR_DEBUG=true
