add See More Courses btn and redirection with algolia skills only

--- a/.env.development
+++ b/.env.development
@@ -15,9 +15,9 @@ INTEGRATION_WARNING_DISMISSED_COOKIE_NAME='integration-warning-dismissed'
 SEGMENT_KEY=''
 PORT=8734
 SITE_NAME='edX'
-ALGOLIA_APP_ID=''
-ALGOLIA_SEARCH_API_KEY=''
-ALGOLIA_INDEX_NAME=''
+ALGOLIA_APP_ID='testing2MLYZ9WWU0'
+ALGOLIA_SEARCH_API_KEY='b0004be3c12168d98a6d6b793fcd46b9'
+ALGOLIA_INDEX_NAME='enterprise_catalog_new'
 FULLSTORY_ORG_ID=''
 USE_API_CACHE=''
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
