--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "email-prop-type": "1.1.7",
     "font-awesome": "4.7.0",
     "history": "4.10.1",
+    "instantsearch-tagsbox-react": "^1.2.1",
     "iso-639-1": "2.1.4",
     "lodash.debounce": "^4.0.8",
     "moment": "2.29.1",
