--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-instantsearch-dom": "6.8.2",
     "react-intl": "2.9.0",
     "react-loading-skeleton": "2.1.1",
+    "react-parallax": "^3.3.0",
     "react-redux": "7.2.2",
     "react-responsive": "6.1.2",
     "react-router": "4.3.1",
