fix: Fixed dependency issue and added npm run build to the CI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
       run: npm run lint
     - name: Test
       run: npm run test
+    - name: Build
+      run: npm run build
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
