--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-fullstory": "1.4.0",
     "react-helmet": "5.2.1",
     "react-instantsearch-dom": "6.8.2",
-    "react-intl": "2.9.0",
+    "react-intl": "^5.21.1",
     "react-loading-skeleton": "2.1.1",
     "react-parallax": "^3.3.0",
     "react-redux": "7.2.2",
@@ -59,6 +59,7 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "3.7.0",
+    "acorn": "^8.5.0",
     "axios-mock-adapter": "1.19.0",
     "coveralls": "3.1.0",
     "enzyme": "3.11.0",
