feat: update facet to 'program_type' for `Program` search

--- a/.env.development
+++ b/.env.development
@@ -26,7 +26,6 @@ LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 FEATURE_ENROLL_WITH_CODES='true'
 FEATURE_LANGUAGE_FACET='true'
-FEATURE_PROGRAM_TITLES_FACET='true'
 SHOW_MAINTENANCE_ALERT=''
 HOTJAR_APP_ID=''
 HOTJAR_VERSION=6
@@ -34,3 +33,4 @@ HOTJAR_DEBUG=''
 ENABLE_SKILLS_QUIZ=true
 ENABLE_NOTICES=''
 FEATURE_ENABLE_PROGRAMS=false
+FEATURE_PROGRAM_TYPE_FACET=true
