--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "license": "AGPL-3.0",
   "scripts": {
     "build": "fedx-scripts webpack",
+    "build:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "i18n_extract": "BABEL_ENV=i18n fedx-scripts babel src --quiet > /dev/null",
     "lint": "fedx-scripts eslint --ext .js --ext .jsx .",
@@ -80,10 +81,12 @@
     "precommit": "npm run lint",
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
-    "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%"
+    "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack-dev-server --progress",
+    "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
+    "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/edx/frontend-app-learner-portal-enterprise.git"
   }
 }
