--- a/.env.development
+++ b/.env.development
@@ -30,7 +30,8 @@ SHOW_MAINTENANCE_ALERT=''
 HOTJAR_APP_ID=''
 HOTJAR_VERSION=6
 HOTJAR_DEBUG=''
-ENABLE_SKILLS_QUIZ=true
+ENABLE_SKILLS_QUIZ='true'
 ENABLE_NOTICES=''
-FEATURE_ENABLE_PROGRAMS=false
+FEATURE_ENABLE_PROGRAMS=''
 FEATURE_PROGRAM_TYPE_FACET=true
+FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
