--- a/.env.development
+++ b/.env.development
@@ -38,3 +38,4 @@ FEATURE_ENABLE_PROGRAMS=true
 FEATURE_PROGRAM_TYPE_FACET=true
 FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
 LEARNING_TYPE_FACET='true'
+LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
