--- a/.env.development
+++ b/.env.development
@@ -26,7 +26,9 @@ LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 FEATURE_ENROLL_WITH_CODES='true'
 FEATURE_LANGUAGE_FACET='true'
-SHOW_MAINTENANCE_ALERT=''
+IS_MAINTENANCE_ALERT_ENABLED='true'
+MAINTENANCE_ALERT_MESSAGE='edX is currently in a brief maintenance window. Functionality involving course enrollments is unavailable at this time, including enrollment and assignment. Please check back shortly to continue the learning journey.'
+MAINTENANCE_ALERT_START_TIMESTAMP='2021-12-10T22:03:00Z'
 HOTJAR_APP_ID=''
 HOTJAR_VERSION=6
 HOTJAR_DEBUG=''
