feat: configurable basic system warning notice (#407)
* feat: configurable basic system warning notice

* fix: update adr and remove config settings

* fix: change adr title

--- a/.env.development
+++ b/.env.development
@@ -26,7 +26,9 @@ LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
 FEATURE_ENROLL_WITH_CODES='true'
 FEATURE_LANGUAGE_FACET='true'
-SHOW_MAINTENANCE_ALERT=''
+IS_MAINTENANCE_ALERT_ENABLED=''
+MAINTENANCE_ALERT_MESSAGE=''
+MAINTENANCE_ALERT_START_TIMESTAMP=''
 HOTJAR_APP_ID=''
 HOTJAR_VERSION=6
 HOTJAR_DEBUG=''
