--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "history": "4.10.1",
     "iso-639-1": "2.1.4",
     "lodash.debounce": "^4.0.8",
+    "lodash.camelcase": "4.3.0",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
     "query-string": "5.1.1",
@@ -43,14 +44,10 @@
     "react-router": "4.3.1",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "2.3.1",
-    "react-router-redux": "5.0.0-alpha.9",
     "react-transition-group": "4.4.1",
     "react-truncate": "2.4.0",
     "react-use-hotjar": "^1.1.2",
     "redux": "4.0.5",
-    "redux-devtools-extension": "2.13.8",
-    "redux-logger": "3.0.6",
-    "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
     "universal-cookie": "4.0.4"
   },
@@ -66,8 +63,7 @@
     "enzyme-adapter-react-16": "1.15.6",
     "match-media-mock": "0.1.1",
     "prettier": "2.2.1",
-    "react-test-renderer": "16.14.0",
-    "redux-mock-store": "1.5.4"
+    "react-test-renderer": "16.14.0"
   },
   "keywords": [],
   "license": "AGPL-3.0",
