feat: Enabled FEATURE_ENABLE_PROGRAMS and FEATURE_PROGRAM_TYPE_FACET

--- a/.env.development
+++ b/.env.development
@@ -34,6 +34,6 @@ HOTJAR_VERSION=6
 HOTJAR_DEBUG=''
 ENABLE_SKILLS_QUIZ='true'
 ENABLE_NOTICES=''
-FEATURE_ENABLE_PROGRAMS=''
+FEATURE_ENABLE_PROGRAMS=true
 FEATURE_PROGRAM_TYPE_FACET=true
 FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
