feat: enabled LEARNING_TYPE_FACET feature.

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ USE_API_CACHE=true
 ENABLE_SKILLS_QUIZ=false
 FEATURE_ENABLE_PROGRAMS=true
 FEATURE_PROGRAM_TYPE_FACET=true
+LEARNING_TYPE_FACET='true'
