--- a/.env.development
+++ b/.env.development
@@ -37,3 +37,4 @@ ENABLE_NOTICES=''
 FEATURE_ENABLE_PROGRAMS=true
 FEATURE_PROGRAM_TYPE_FACET=true
 FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
+LEARNING_TYPE_FACET='true'
