feat: install react-scroll and add Program data bar

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "font-awesome": "4.7.0",
     "history": "4.10.1",
     "iso-639-1": "2.1.4",
-    "lodash.debounce": "^4.0.8",
     "lodash.camelcase": "4.3.0",
+    "lodash.debounce": "^4.0.8",
     "moment": "2.29.1",
     "prop-types": "15.7.2",
     "query-string": "5.1.1",
@@ -44,6 +44,7 @@
     "react-router": "4.3.1",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "2.3.1",
+    "react-scroll": "^1.8.4",
     "react-transition-group": "4.4.1",
     "react-truncate": "2.4.0",
     "react-use-hotjar": "^1.1.2",
