--- a/.env.development
+++ b/.env.development
@@ -39,3 +39,4 @@ FEATURE_PROGRAM_TYPE_FACET=true
 FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
 LEARNING_TYPE_FACET='true'
 LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
+FEATURE_BROWSE_AND_REQUEST='true'
