feat: reflect subsidy requests in offer summary card

--- a/.env.development
+++ b/.env.development
@@ -38,6 +38,7 @@ ENABLE_NOTICES=''
 FEATURE_ENABLE_PROGRAMS=true
 FEATURE_PROGRAM_TYPE_FACET=true
 FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
+FEATURE_ENABLE_SUBSIDY_REQUESTS='true'
 LEARNING_TYPE_FACET='true'
 LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
 FEATURE_BROWSE_AND_REQUEST='true'
