--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "color": "3.1.3",
     "connected-react-router": "5.0.1",
     "core-js": "3.7.0",
+    "date-fns": "^2.28.0",
     "email-prop-type": "1.1.7",
     "font-awesome": "4.7.0",
     "history": "4.10.1",
@@ -29,7 +30,6 @@
     "lodash.camelcase": "4.3.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
-    "moment": "2.29.1",
     "prop-types": "15.7.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
