--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: node_js CI
 
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+    - 'master'
+  pull_request:
+    branches:
+    - '**'
 
 jobs:
   tests:
