--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "3.7.0",
+    "@testing-library/user-event": "^13.5.0",
     "acorn": "^8.5.0",
     "axios-mock-adapter": "1.19.0",
     "coveralls": "3.1.0",
