--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
     "@edx/frontend-component-footer": "10.1.0",
-    "@edx/frontend-enterprise-catalog-search": "^2.6.1",
+    "@edx/frontend-enterprise-catalog-search": "2.6.1",
     "@edx/frontend-enterprise-logistration": "1.1.2",
     "@edx/frontend-enterprise-utils": "1.3.0",
     "@edx/frontend-platform": "1.11.0",
