--- a/.env.development
+++ b/.env.development
@@ -25,7 +25,7 @@ LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
 LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
 FAVICON_URL=https://edx-cdn.org/v3/default/favicon.ico
-FEATURE_ENROLL_WITH_CODES='true'
+FEATURE_ENROLL_WITH_CODES=''
 FEATURE_LANGUAGE_FACET='true'
 IS_MAINTENANCE_ALERT_ENABLED=''
 MAINTENANCE_ALERT_MESSAGE=''
