--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "color": "3.1.3",
     "connected-react-router": "5.0.1",
     "core-js": "3.7.0",
+    "dompurify": "^2.3.6",
     "email-prop-type": "1.1.7",
     "font-awesome": "4.7.0",
     "history": "4.10.1",
