feat: enable pathways feature

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ ENABLE_SKILLS_QUIZ=false
 FEATURE_ENABLE_PROGRAMS=true
 FEATURE_PROGRAM_TYPE_FACET=true
 LEARNING_TYPE_FACET='true'
+FEATURE_ENABLE_PATHWAYS=true
