--- a/.env.development
+++ b/.env.development
@@ -41,3 +41,4 @@ FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
 LEARNING_TYPE_FACET='true'
 LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
 FEATURE_BROWSE_AND_REQUEST='true'
+FEATURE_ENABLE_PATHWAYS=true
