feat: Add support for Optimizely experiments.
Also upgrades to frontend-build 9.2.0
ENT-5726

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
+NODE_ENV='development'
 BASE_URL='http://localhost:8734'
 LMS_BASE_URL='http://localhost:18000'
 ECOMMERCE_BASE_URL='http://localhost:18130'
