[DP-59] Introduce linter (#9)
* Add eslint config

* Apply linting. Remove circular dependency. Move provider components into their respective files

* Add common frontend package into dependency

* Add precommit hooks

* Add npmrc to allow installing our packages

* Remove commit lint

* Add NPM_AUTH_TOKEN to CI

* Update dojo frontend package

* Temporarily disabled tests that didn't pass

* Update dojo-frontend-common

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: node_js CI
 
 on: [push, pull_request]
 
+env:
+  NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
