--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
     "@fortawesome/react-fontawesome": "0.1.12",
+    "@reustleco/dojo-frontend-common": "^1.1.1",
     "@sentry/react": "^6.19.6",
     "algoliasearch": "4.6.0",
     "axios": "0.21.1",
@@ -53,7 +54,7 @@
     "universal-cookie": "4.0.4"
   },
   "devDependencies": {
-    "@edx/frontend-build": "8.1.3",
+    "@edx/frontend-build": "9.1.4",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "3.7.0",
@@ -63,6 +64,7 @@
     "coveralls": "3.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
+    "husky": "^7.0.4",
     "match-media-mock": "0.1.1",
     "prettier": "2.2.1",
     "react-test-renderer": "16.14.0"
@@ -81,7 +83,8 @@
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack-dev-server --progress",
     "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
-    "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save"
+    "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
