--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "author": "edX",
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
-    "@edx/frontend-component-footer": "10.1.0",
-    "@edx/frontend-enterprise-catalog-search": "2.7.0",
-    "@edx/frontend-enterprise-logistration": "1.1.2",
-    "@edx/frontend-enterprise-utils": "1.3.0",
-    "@edx/frontend-platform": "1.11.0",
-    "@edx/paragon": "17.5.0",
+    "@edx/frontend-component-footer": "^10.2.4",
+    "@edx/frontend-enterprise-catalog-search": "3.0.2",
+    "@edx/frontend-enterprise-logistration": "^2.0.0",
+    "@edx/frontend-enterprise-utils": "^2.0.0",
+    "@edx/frontend-platform": "^1.15.6",
+    "@edx/paragon": "^19.15.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
@@ -36,7 +36,7 @@
     "react-dom": "16.14.0",
     "react-fullstory": "1.4.0",
     "react-helmet": "5.2.1",
-    "react-instantsearch-dom": "6.8.2",
+    "react-instantsearch-dom": "^6.8.2",
     "react-intl": "^5.21.1",
     "react-loading-skeleton": "2.1.1",
     "react-parallax": "^3.3.0",
