--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "author": "edX",
   "dependencies": {
-    "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
+    "@edx/brand": "npm:@edx/brand-edx.org@^2.0.5",
     "@edx/frontend-component-footer": "10.1.0",
     "@edx/frontend-enterprise-catalog-search": "2.7.0",
     "@edx/frontend-enterprise-logistration": "1.1.2",
@@ -30,6 +30,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "moment": "2.29.1",
+    "npm": "^6.14.16",
     "prop-types": "15.7.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
@@ -52,7 +53,7 @@
     "universal-cookie": "4.0.4"
   },
   "devDependencies": {
-    "@edx/frontend-build": "8.1.3",
+    "@edx/frontend-build": "9.1.4",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.7",
     "@testing-library/react-hooks": "3.7.0",
