feat: add enterprise offer summary card

--- a/.env.development
+++ b/.env.development
@@ -36,10 +36,11 @@ HOTJAR_VERSION=6
 HOTJAR_DEBUG=''
 ENABLE_SKILLS_QUIZ='true'
 ENABLE_NOTICES=''
-FEATURE_ENABLE_PROGRAMS=true
-FEATURE_PROGRAM_TYPE_FACET=true
+FEATURE_ENABLE_PROGRAMS='true'
+FEATURE_PROGRAM_TYPE_FACET='true'
 FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
 LEARNING_TYPE_FACET='true'
 LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
 FEATURE_BROWSE_AND_REQUEST='true'
-FEATURE_ENABLE_PATHWAYS=true
+FEATURE_ENABLE_PATHWAYS='true'
+FEATURE_ENROLL_WITH_ENTERPRISE_OFFERS='true'
