--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "0.1.12",
     "@reustleco/dojo-frontend-common": "^1.1.1",
     "@sentry/react": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "algoliasearch": "4.6.0",
     "axios": "0.21.1",
     "classnames": "2.2.6",
