--- a/package.json
+++ b/package.json
@@ -81,9 +81,11 @@
     "lint:fix": "fedx-scripts eslint --fix --ext .js --ext .jsx .",
     "precommit": "npm run lint",
     "snapshot": "fedx-scripts jest --updateSnapshot",
+    "snapshot:smoke": "fedx-scripts jest --testPathPattern=src/smoke.test.jsx --updateSnapshot ",
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack-dev-server --progress",
     "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
+    "test:smoke": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50% --testPathPattern=src/smoke.test.jsx",
     "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save",
     "prepare": "husky install"
   },
