--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-scroll": "^1.8.4",
     "react-transition-group": "4.4.1",
     "react-truncate": "2.4.0",
-    "react-use-hotjar": "^1.1.2",
+    "react-use-hotjar": "1.0.9",
     "redux": "4.0.5",
     "reselect": "4.0.0",
     "universal-cookie": "4.0.4"
