--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         node: [16]
+        npm: [8.5.x]
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -15,6 +16,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node }}
+    - name: Install npm 8.5.x
+      run: npm install -g npm@${{ matrix.npm }}
     - name: Install dependencies
       run: npm ci
     - name: Lint
