--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         node: [16]
     steps:
-    - name: Checkout
+    - name: Checkouts
       uses: actions/checkout@v2
     - name: Setup Nodejs
       uses: actions/setup-node@v1
