feat: add recommended courses carousel

--- a/.env.development
+++ b/.env.development
@@ -42,6 +42,7 @@ FEATURE_ENABLE_AUTO_APPLIED_LICENSES='true'
 LEARNING_TYPE_FACET='true'
 LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
 FEATURE_ENABLE_PATHWAYS='true'
+FEATURE_ENABLE_RECOMMENDATIONS_CAROUSEL = '';
 FEATURE_ENROLL_WITH_ENTERPRISE_OFFERS='true'
 FEATURE_ENABLE_PATHWAY_PROGRESS='true'
 GETSMARTER_STUDENT_TC_URL='https://www.getsmarter.com/terms-and-conditions-for-students'
