fix: Fixed a couple of cosmetic issues and enabled pathway-progress feature by default.

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ FEATURE_ENABLE_PROGRAMS=true
 FEATURE_PROGRAM_TYPE_FACET=true
 LEARNING_TYPE_FACET='true'
 FEATURE_ENABLE_PATHWAYS=true
+FEATURE_ENABLE_PATHWAY_PROGRESS='true'
