--- a/.env.development
+++ b/.env.development
@@ -44,6 +44,7 @@ LEARNER_SUPPORT_URL='https://support.edx.org/hc/en-us'
 FEATURE_ENABLE_PATHWAYS='true'
 FEATURE_ENROLL_WITH_ENTERPRISE_OFFERS='true'
 FEATURE_ENABLE_PATHWAY_PROGRESS='true'
+FEATURE_ENABLE_MY_CAREER='false'
 GETSMARTER_STUDENT_TC_URL='https://www.getsmarter.com/terms-and-conditions-for-students'
 GETSMARTER_PRIVACY_POLICY_URL='https://www.getsmarter.com/privacy-policy'
 FEATURE_CONTENT_HIGHLIGHTS='true'
