--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash.clonedeep": "4.5.0",
     "lodash.debounce": "4.0.8",
     "moment": "2.29.1",
+    "plotly.js-dist": "^2.17.0",
     "prop-types": "15.7.2",
     "react": "16.14.0",
     "react-dom": "16.14.0",
