feat: update react & react-dom to v17

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "moment": "2.29.1",
     "plotly.js-dist": "2.17.0",
     "prop-types": "15.7.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-fullstory": "1.4.0",
     "react-helmet": "5.2.1",
     "react-instantsearch-dom": "6.38.1",
@@ -69,17 +69,17 @@
     "@edx/frontend-build": "12.8.17",
     "@tanstack/eslint-plugin-query": "4.29.9",
     "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.7",
+    "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "3.7.0",
     "@testing-library/user-event": "13.5.0",
     "acorn": "8.5.0",
     "axios-mock-adapter": "1.19.0",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.6",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
     "jest-canvas-mock": "^2.4.0",
     "match-media-mock": "0.1.1",
     "prettier": "2.2.1",
-    "react-test-renderer": "16.14.0",
+    "react-test-renderer": "17.0.2",
     "resize-observer-polyfill": "^1.5.1"
   },
   "keywords": [],
