--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@edx/frontend-enterprise-hotjar": "1.3.0",
     "@edx/frontend-enterprise-logistration": "3.0.0",
     "@edx/frontend-enterprise-utils": "3.0.0",
-    "@edx/frontend-platform": "4.2.0",
+    "@edx/frontend-platform": "4.5.1",
     "@edx/paragon": "20.36.0",
     "@fortawesome/fontawesome-svg-core": "1.2.32",
     "@fortawesome/free-brands-svg-icons": "5.15.1",
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "@edx/browserslist-config": "1.1.1",
-    "@edx/frontend-build": "12.8.57",
+    "@edx/frontend-build": "github:openedx/frontend-build#ags/server",
     "@tanstack/eslint-plugin-query": "4.29.9",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.7",
@@ -94,6 +94,7 @@
     "snapshot": "fedx-scripts jest --updateSnapshot",
     "start": "fedx-scripts webpack-dev-server --progress",
     "start:with-theme": "THEME=npm:@edx/brand-edx.org@latest npm run install-theme && fedx-scripts webpack-dev-server --progress",
+    "serve": "fedx-scripts serve",
     "test": "fedx-scripts jest --coverage --passWithNoTests --maxWorkers=50%",
     "test:watch": "npm run test -- --watch",
     "install-theme": "npm install \"@edx/brand@${THEME}\" --no-save"
