refactor: bumped enterprise, react-fontawesome & react-helmet

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@edx/brand": "npm:@edx/brand-openedx@1.2.0",
     "@edx/frontend-component-footer": "12.1.2",
     "@edx/frontend-enterprise-catalog-search": "4.5.0",
-    "@edx/frontend-enterprise-hotjar": "1.3.0",
+    "@edx/frontend-enterprise-hotjar": "1.4.0",
     "@edx/frontend-enterprise-logistration": "3.4.0",
     "@edx/frontend-enterprise-utils": "3.4.0",
     "@edx/frontend-platform": "4.6.0",
@@ -19,7 +19,7 @@
     "@fortawesome/free-brands-svg-icons": "5.15.1",
     "@fortawesome/free-regular-svg-icons": "5.15.1",
     "@fortawesome/free-solid-svg-icons": "5.15.1",
-    "@fortawesome/react-fontawesome": "0.1.12",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@tanstack/react-query": "4.28.0",
     "@tanstack/react-query-devtools": "4.29.0",
     "algoliasearch": "4.6.0",
@@ -45,7 +45,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-fullstory": "1.4.0",
-    "react-helmet": "5.2.1",
+    "react-helmet": "6.1.0",
     "react-instantsearch-dom": "6.38.1",
     "react-lines-ellipsis": "0.15.3",
     "react-parallax": "3.3.0",
