feat: add accounnt and profile urls in env files and replace legacy url

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 NODE_ENV='production'
 USE_API_CACHE=true
+ACCOUNT_SETTINGS_URL=''
+ACCOUNT_PROFILE_URL=''
 ENABLE_SKILLS_QUIZ=false
 FEATURE_ENABLE_PROGRAMS=true
 FEATURE_PROGRAM_TYPE_FACET=true
