--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,8 @@ ECOMMERCE_BASE_URL='http://localhost:18130'
 DISCOVERY_API_BASE_URL='http://localhost:18381'
 ENTERPRISE_ACCESS_BASE_URL='http://localhost:18270'
 ENTERPRISE_SUBSIDY_BASE_URL='http://localhost:18280'
+ACCOUNT_PROFILE_URL=http://localhost:1995
+ACCOUNT_SETTINGS_URL=http://localhost:1997
 ENTERPRISE_CATALOG_API_BASE_URL='http://localhost:18160'
 LICENSE_MANAGER_URL='http://localhost:18170'
 MARKETING_SITE_BASE_URL='https://stage.edx.org'
