feat: Added skills quiz v2

--- a/.env.development
+++ b/.env.development
@@ -23,6 +23,7 @@ SITE_NAME='edX'
 ALGOLIA_APP_ID=''
 ALGOLIA_SEARCH_API_KEY=''
 ALGOLIA_INDEX_NAME=''
+ALGOLIA_INDEX_NAME_JOBS=''
 FULLSTORY_ORG_ID=''
 USE_API_CACHE=''
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
