feat: migrate enzyme to rtl

--- a/package.json
+++ b/package.json
@@ -60,15 +60,14 @@
   "devDependencies": {
     "@edx/browserslist-config": "1.1.1",
     "@edx/frontend-build": "12.9.4",
+    "@edx/react-unit-test-utils": "^1.7.0",
     "@tanstack/eslint-plugin-query": "4.29.9",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "12.1.5",
     "@testing-library/react-hooks": "3.7.0",
     "@testing-library/user-event": "13.5.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "0.8.0",
     "acorn": "8.5.0",
     "axios-mock-adapter": "1.19.0",
-    "enzyme": "3.11.0",
     "jest-canvas-mock": "^2.4.0",
     "match-media-mock": "0.1.1",
     "mockdate": "3.0.5",
