feat: preconnect with critical services and resources in html

--- a/.env.development
+++ b/.env.development
@@ -10,6 +10,7 @@ ENTERPRISE_SUBSIDY_BASE_URL='http://localhost:18280'
 ENTERPRISE_CATALOG_API_BASE_URL='http://localhost:18160'
 LICENSE_MANAGER_URL='http://localhost:18170'
 MARKETING_SITE_BASE_URL='https://stage.edx.org'
+COOKIE_LAW_CDN_URL=''
 LOGIN_URL='http://localhost:18000/login'
 LOGOUT_URL='http://localhost:18000/logout'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
