--- a/.env.development-stage
+++ b/.env.development-stage
@@ -14,6 +14,7 @@ ENTERPRISE_SUBSIDY_BASE_URL='https://enterprise-subsidy.stage.edx.org'
 ENTERPRISE_CATALOG_API_BASE_URL='https://enterprise-catalog.stage.edx.org'
 LICENSE_MANAGER_URL='https://license-manager.stage.edx.org'
 MARKETING_SITE_BASE_URL='https://stage.edx.org'
+COOKIE_LAW_CDN_URL=''
 LOGIN_URL='https://courses.stage.edx.org/login'
 LOGOUT_URL='https://courses.stage.edx.org/logout'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
